# trading-bot

./: CMakeLists.txt  README.md  build_and_run.sh  fyers_auth.py
include/: FyersAPI.h  IndicatorsEngine.h  OptionChainAnalyzer.h  RiskManager.h  StrategyEngine.h  TradingBot.h
src/: FyersAPI.cpp  IndicatorsEngine.cpp  OptionChainAnalyzer.cpp  RiskManager.cpp  StrategyEngine.cpp  main.cpp
